# making-malai

./: .gitignore  README.md  pyproject.toml
rag-pdf-tables/: main.py  parse_summarize.ipynb  process_json.py  streamlit.py  table_to_json.py
rag-pdf-tables/dataset/: 2022-all-prefectures.parquet  2022-new-ages.parquet  2022-new-prefectures.parquet
